--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO Meta description -->
     <meta name="description"
-          content="AppCo app landing page template or product landing page template helps you easily create websites for your app or product,  landing page template form promotion and many more.">
+          content="Tassai">
     <meta name="author" content="ThemeTags">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -23,7 +23,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--title-->
-    <title>AppCo App Landing Page Template</title>
+    <title>Taasai</title>
 
     <!--favicon icon-->
     <link rel="icon" href="/assets/img/favicon.png" type="image/png" sizes="16x16">
